# SDL2-CPM-CMake-Example

./: .gitignore  CMakeLists.txt  README.md  demo.js  demo.js.mem  demo.wasm  demo.wasm.js  demo2.js  demo2.js.mem  demo2.wasm  demo2.wasm.js  index.html  main.cpp  main2.cpp  opengl.html
.github/workflows/: web.yml
assets/: yourgameassetsgoeshere.txt
scripts/: emscripten-build.sh  emscripten-install.sh
